// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<withCurrentUserContext(HotspotViewerRenderer)
  commentTextRef={
    {
      "current": null,
    }
  }
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  loading={true}
  onCloseStatusUpdateSuccessModal={[Function]}
  onLocationClick={[MockFunction]}
  onShowCommentForm={[Function]}
  onSwitchFilterToStatusOfUpdatedHotspot={[Function]}
  onUpdateHotspot={[Function]}
  showStatusUpdateSuccessModal={false}
/>
`;

exports[`should render correctly 2`] = `
<withCurrentUserContext(HotspotViewerRenderer)
  commentTextRef={
    {
      "current": null,
    }
  }
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  hotspot={
    {
      "id": "I am a detailled hotspot",
      "rule": {},
    }
  }
  loading={false}
  onCloseStatusUpdateSuccessModal={[Function]}
  onLocationClick={[MockFunction]}
  onShowCommentForm={[Function]}
  onSwitchFilterToStatusOfUpdatedHotspot={[Function]}
  onUpdateHotspot={[Function]}
  ruleDescriptionSections={[]}
  showStatusUpdateSuccessModal={false}
/>
`;
